--- a/07 - Array Cardio Day 2/index-START.html
+++ b/07 - Array Cardio Day 2/index-START.html
@@ -27,15 +27,43 @@
 
     // Some and Every Checks
     // Array.prototype.some() // is at least one person 19 or older?
+    const isAdult = people.some(function(person) {
+      const currentYear = (new Date().getFullYear());
+      if (currentYear - person.year >= 19) {
+        return true;
+      }
+    });
+    console.log({isAdult}); // {} to show you name of variable too
+
     // Array.prototype.every() // is everyone 19 or older?
+    const allAdults = people.every(person => {
+      const currentYear = (new Date().getFullYear());
+      return currentYear - person.year >= 19;
+    })
 
     // Array.prototype.find()
     // Find is like filter, but instead returns just the one you are looking for
     // find the comment with the ID of 823423
+    const comment = comments.find(function(comment) {
+      if (comment.id === 82342) {
+        return true;
+      }
+    });
+
+    // arrow functions are implicit return
+    const comment_v2 = comments.find(comment => comment.id === 823432);
 
     // Array.prototype.findIndex()
     // Find the comment with this ID
     // delete the comment with the ID of 823423
+    const index = comments.findIndex(comment => comment.id === 823423);
+
+    comments.splice(index, 1);
+
+    const newComments = [
+      ...comments.slice(0, index),
+      ...comments.slice(index + 1)
+    ];
 
   </script>
 </body>
